# task-easy-software

./: README.md  main.py  pyproject.toml  utils.py
01_notebooks/: 01_exploration_of_chunking_strategies.ipynb
data/: no_sale_countries.md
task_description/: _python_developer_task.md
